# CloudComputing

./: README.md
HW_1/: README.md  docker-compose.yml
HW_1/database/: create_tables.sql
HW_1/server/: .env.local  Dockerfile  docker-entrypoint.sh  pyproject.toml
HW_1/server/src/: main.py
HW_1/server/src/api/: app.py
HW_1/server/src/schemas/: schemas.py
HW_1/server/src/utils/: utils.py
HW_2/: Makefile  README.md
HW_2/database/: Dockerfile
HW_2/kube-manifests/: database-volume-pvc.yaml  env-local-configmap.yaml  mysql-db-deployment.yaml  mysql-db-service.yaml  server-app-deployment.yaml  server-app-service.yaml
HW_2/server/: Dockerfile
HW_2/server/src/: settings.py
HW_2/server/src/api/: dependencies.py  exception_handlers.py  logger.py  router.py
HW_2/server/src/core/: main.py  orm.py
